# SIPI_9-10

./: 01_api_page.md  02_description_page.md  03_architecture_page.md  Home.md  README.md  flat_model.py  main.py  prepare_db.py  pyproject.toml  swagger_file.py
pages/: page_1.py  page_2.py  page_3.py
performance_test/: test_selenium.py
tests/: test_db.py  test_func.py
