[project]
name = "sipi-9-10"
version = "0.1.0"
description = ""
authors = [
    {name = "fedor",email = "shadaevf@mail.ru"}
]
readme = "README.md"
requires-python = "<4.0 >= 3.11"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

