[project]
name = "sipi-9-10"
version = "0.1.0"
description = ""
authors = [
    {name = "fedor",email = "shadaevf@mail.ru"}
]
readme = "README.md"
requires-python = "<4.0 >= 3.11"
dependencies = [
    "python (>=3.10,<4.0.0)",
    "streamlit (>=1.35.0,<2.0.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.8.4,<4.0.0)",
    "seaborn (>=0.13.2,<1.0.0)",
    "pytest (>=8.1.1,<9.0.0)",
    "selenium (>=4.0.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

